--- a/SENL_metodos.ipynb
+++ b/SENL_metodos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SENL_metodos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOi39ZU8ZGmlgI9yuomSRb5",
+      "authorship_tag": "ABX9TyNtsTn9o7LWSMnTlMJRiGZg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHrpOD-oMAWh",
-        "outputId": "67caefb7-bf90-48f7-9209-b59d47facc6a"
+        "outputId": "1623c60b-5bb4-4d0f-ebf7-1751ed86f8b3"
       },
       "execution_count": 4,
       "outputs": [
@@ -143,6 +143,70 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Gauss-Seidel multivariable"
+      ],
+      "metadata": {
+        "id": "Mni78kkouOGd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def h(x):\n",
+        "  xk1=x.copy()\n",
+        "  x1,x2,x3=xk1\n",
+        "  x1=np.cos(x2*x3)/3+1/6\n",
+        "  x2=np.sqrt(x1**2+np.sin(x3)+1.06)/9-0.1\n",
+        "  x3=-np.exp(-x1*x2)/20-(10*np.pi-3)/60\n",
+        "  return np.array([x1,x2,x3])"
+      ],
+      "metadata": {
+        "id": "4IgpUAMFsMPE"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sol=pfm(h,x,tol=1e-10)\n",
+        "sol"
+      ],
+      "metadata": {
+        "id": "cv-CsmaAtB8t",
+        "outputId": "c7d72458-cd3f-43f5-aa12-2e2aead4a0ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0.5         0.02717248 -0.52292406] 0.7240082274933131\n",
+            "[ 4.99966351e-01  3.39935171e-05 -5.23597926e-01] 0.027146871728605713\n",
+            "[ 5.00000000e-01  4.54242385e-08 -5.23598774e-01] 4.7806602347201315e-05\n",
+            "[ 5.00000000e-01  6.07076195e-11 -5.23598776e-01] 4.537773545576623e-08\n",
+            "[ 5.00000000e-01  8.11295475e-14 -5.23598776e-01] 6.064543311379392e-11\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.00000000e-01,  8.11295475e-14, -5.23598776e-01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     },
@@ -191,7 +255,7 @@
       "metadata": {
         "id": "tdcz1oi5MG2X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +269,7 @@
       "metadata": {
         "id": "vCuTVj-ZMU2y"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +283,7 @@
       "metadata": {
         "id": "-UzK562bMVpJ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +300,7 @@
         "id": "JSGKSlECMZQg",
         "outputId": "8cdbe514-f5d2-40ae-dc15-4bcc990b26b0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +336,7 @@
       "metadata": {
         "id": "VTN7steNMs5E"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +352,7 @@
         "id": "PuKk2kIoM1Oa",
         "outputId": "9ed1fde0-e39e-43cf-d674-b52b85f8e7e3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +379,7 @@
         "id": "_GawfjjMNAfD",
         "outputId": "5778dd01-fb3e-4382-ec3c-894defe7b4b2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +406,7 @@
         "id": "kp5v_zQYNlHd",
         "outputId": "2930de5b-1825-422d-8c7b-54259d329ea5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +433,7 @@
         "id": "9vWvpCXZNoDo",
         "outputId": "d572bb90-a911-4f72-efdb-f5200ccdd8b1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +460,7 @@
         "id": "QkX9izY_OFF1",
         "outputId": "568c7fbd-3032-4cd4-e26e-01add251a91f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +487,7 @@
         "id": "DmOE-5HrOGaw",
         "outputId": "347728f5-26ea-44a1-a8db-e78f0697e97b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
