--- a/SENL_examen.ipynb
+++ b/SENL_examen.ipynb
@@ -6,7 +6,7 @@
       "name": "SENL_examen.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWqjRaY0sV+J3kBXc0lsq7",
+      "authorship_tag": "ABX9TyMnkPTaFKhHmQS9KnmyiEaI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
         "C_Z-5C_AC_X=0\n",
         "$$\n",
         "\n",
-        "Tip: Los resultados obtenidos son menores a 1"
+        "Tip: Los valores de $C_A$ y $C_B$ deben ser menores a los iniciales, el resto de las concentraciones deben ser mayor a cero."
       ],
       "metadata": {
         "id": "3Q-KsTFjSxnW"
