--- a/SENL_metodos.ipynb
+++ b/SENL_metodos.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "SENL_metodos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtsTn9o7LWSMnTlMJRiGZg",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP5zUhe0JYKP35Txh+ip2+f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +36,7 @@
         "\n",
         "$$\n",
         "3x_1-cos(x_2x_3)-\\frac{1}{2}=0\\\\\n",
-        "x_1^2-81(x_2+0.2)^2+sin(x_3)+1.06=0\\\\\n",
+        "x_1^2-81(x_2+0.1)^2+sin(x_3)+1.06=0\\\\\n",
         "e^{-x_1x_2}+20x_3+\\frac{10\\pi -3}{3}=0\n",
         "$$\n",
         "\n",
@@ -100,7 +101,7 @@
       "metadata": {
         "id": "i9PX-o46KPA-"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -116,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHrpOD-oMAWh",
-        "outputId": "1623c60b-5bb4-4d0f-ebf7-1751ed86f8b3"
+        "outputId": "ac57fc92-a4e6-47d5-f19a-74072a4fbe77"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,70 +140,6 @@
           "data": {
             "text/plain": [
               "array([ 0.5       ,  0.        , -0.52359878])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Gauss-Seidel multivariable"
-      ],
-      "metadata": {
-        "id": "Mni78kkouOGd"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def h(x):\n",
-        "  xk1=x.copy()\n",
-        "  x1,x2,x3=xk1\n",
-        "  x1=np.cos(x2*x3)/3+1/6\n",
-        "  x2=np.sqrt(x1**2+np.sin(x3)+1.06)/9-0.1\n",
-        "  x3=-np.exp(-x1*x2)/20-(10*np.pi-3)/60\n",
-        "  return np.array([x1,x2,x3])"
-      ],
-      "metadata": {
-        "id": "4IgpUAMFsMPE"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sol=pfm(h,x,tol=1e-10)\n",
-        "sol"
-      ],
-      "metadata": {
-        "id": "cv-CsmaAtB8t",
-        "outputId": "c7d72458-cd3f-43f5-aa12-2e2aead4a0ac",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[ 0.5         0.02717248 -0.52292406] 0.7240082274933131\n",
-            "[ 4.99966351e-01  3.39935171e-05 -5.23597926e-01] 0.027146871728605713\n",
-            "[ 5.00000000e-01  4.54242385e-08 -5.23598774e-01] 4.7806602347201315e-05\n",
-            "[ 5.00000000e-01  6.07076195e-11 -5.23598776e-01] 4.537773545576623e-08\n",
-            "[ 5.00000000e-01  8.11295475e-14 -5.23598776e-01] 6.064543311379392e-11\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 5.00000000e-01,  8.11295475e-14, -5.23598776e-01])"
             ]
           },
           "metadata": {},
