--- a/SENL_metodos.ipynb
+++ b/SENL_metodos.ipynb
@@ -6,7 +6,7 @@
       "name": "SENL_metodos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5zUhe0JYKP35Txh+ip2+f",
+      "authorship_tag": "ABX9TyMCzNt9tXjUZm+zyQ+onrbX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "i9PX-o46KPA-"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "source": [
         "x=np.array([0,0,0])\n",
         "\n",
-        "sol=pfm(g,x,tol=1e-10)\n",
+        "sol=pfm(g,x,imax=200,tol=1e-10)\n",
         "sol"
       ],
       "metadata": {
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHrpOD-oMAWh",
-        "outputId": "ac57fc92-a4e6-47d5-f19a-74072a4fbe77"
+        "outputId": "bc08b361-b244-4e27-aee3-9345e402b01f"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,63 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def g(x):\n",
+        "  x1,x2,x3=x\n",
+        "  x1=np.cos(x2*x3)/3+1/6\n",
+        "  x2=np.sqrt(x1**2+np.sin(x3)+1.06)/9-0.1\n",
+        "  x3=-np.exp(-x1*x2)/20-(10*np.pi-3)/60\n",
+        "  return np.array([x1,x2,x3])"
+      ],
+      "metadata": {
+        "id": "244yYVZioN7l"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=np.array([0,0,0])\n",
+        "\n",
+        "sol=pfm(g,x,imax=200,tol=1e-10)\n",
+        "sol"
+      ],
+      "metadata": {
+        "id": "Pj5b_UiroqcO",
+        "outputId": "94b3335a-666e-47ef-f3d8-edf75d651dac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0.5         0.02717248 -0.52292406] 0.7240082274933131\n",
+            "[ 4.99966351e-01  3.39935171e-05 -5.23597926e-01] 0.027146871728605713\n",
+            "[ 5.00000000e-01  4.54242385e-08 -5.23598774e-01] 4.7806602347201315e-05\n",
+            "[ 5.00000000e-01  6.07076195e-11 -5.23598776e-01] 4.537773545576623e-08\n",
+            "[ 5.00000000e-01  8.11295475e-14 -5.23598776e-01] 6.064543311379392e-11\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.00000000e-01,  8.11295475e-14, -5.23598776e-01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
