--- a/ED2oO_tarea.ipynb
+++ b/ED2oO_tarea.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ED2oO_tarea.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8EZ7OjmTpSdA1uHpr3Fif",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNTO4aJzSDBk/Vqm8TQdzyn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +41,7 @@
         "como es el caso, tiene la forma\n",
         "\n",
         "$$\n",
-        "D_e\\frac{d^2C_A}{dx^2}-kC_A=0\n",
+        "D_e\\frac{d^2C_A}{dx^2}+kC_A=0\n",
         "$$\n",
         "\n",
         "donde $D_e$ representa la difusividad efectiva, $C_A$ la concentración de $SH_2$, $k$ la constante de velocidad de reacción y $x$ la distancia desde el centro de la partícula.\n",
@@ -75,17 +76,6 @@
       "metadata": {
         "id": "S1kfq6b2lnQQ"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WEcdUlUrjDuL"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "markdown",
