--- a/ExamenENL.ipynb
+++ b/ExamenENL.ipynb
@@ -6,7 +6,7 @@
       "name": "ExamenENL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPySUoy2R9qIlI70aaiu5RF",
+      "authorship_tag": "ABX9TyNMvPOVuc8RLEuc3MO6CGRm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,8 +120,7 @@
         "id": "sxEebX00Aoba"
       },
       "source": [
-        "def f(T):\n",
-        "  return #defina aqui la ecuacion en funcion de T"
+        "#defina aqui la ecuacion en funcion de T\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -140,9 +139,7 @@
       "metadata": {
         "id": "bmNbWSZaUBOk"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -160,9 +157,7 @@
       "metadata": {
         "id": "fqSuydnGT7ZU"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -172,7 +167,7 @@
         "id": "hXbSDvn_UGQy"
       },
       "source": [
-        "4. Reporte la solución y grafique"
+        "4. Reporte la solución"
       ]
     },
     {
@@ -180,9 +175,7 @@
       "metadata": {
         "id": "Z99ha9ojUKCw"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -249,10 +242,9 @@
         "id": "8Z-TrK2aVZa_"
       },
       "source": [
-        "def f(v):\n",
-        "  #calcule el valor de a\n",
-        "  #calcule el valor de b\n",
-        "  return #use el resto de los valores para retornar la ecuacion de Redlich-Kwong"
+        "#calcule el valor de a\n",
+        "#calcule el valor de b\n",
+        "#defina la ecuacion de Redlich-Kwong"
       ],
       "execution_count": null,
       "outputs": []
@@ -271,9 +263,7 @@
       "metadata": {
         "id": "B9eHub4naKqH"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -291,9 +281,7 @@
       "metadata": {
         "id": "3_b1BNisaTIT"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -303,7 +291,7 @@
         "id": "x8XBeLOcaYOo"
       },
       "source": [
-        "4. Reporte la solución y grafique"
+        "4. Reporte la solución"
       ]
     },
     {
@@ -311,9 +299,7 @@
       "metadata": {
         "id": "Tk4a1Q8nacW-"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
