--- a/SENL_metodos.ipynb
+++ b/SENL_metodos.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "SENL_metodos.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCzNt9tXjUZm+zyQ+onrbX",
+      "authorship_tag": "ABX9TyPJo7IFpUySzdx6h/5pHh85",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +44,7 @@
         "$$\n",
         "x_1=\\frac{1}{3}cos(x_2x_3)+\\frac{1}{6}\\\\\n",
         "x_2=\\frac{1}{9}\\sqrt{x_1^2+sin(x_3)+1.06}-0.1\\\\\n",
-        "x_3=-\\frac{1}{20}e^{-x_1x_2}+\\frac{10\\pi -3}{60}\n",
+        "x_3=-\\frac{1}{20}e^{-x_1x_2}-\\frac{10\\pi -3}{60}\n",
         "$$"
       ],
       "metadata": {
@@ -117,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHrpOD-oMAWh",
-        "outputId": "bc08b361-b244-4e27-aee3-9345e402b01f"
+        "outputId": "96373173-860f-481c-fd0a-5f07d7d1d80a"
       },
       "execution_count": 4,
       "outputs": [
@@ -160,7 +159,7 @@
       "metadata": {
         "id": "244yYVZioN7l"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +177,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
