--- a/ODE_sistema.ipynb
+++ b/ODE_sistema.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ODE_sistema.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOvFS/22FMt8c+pApic7y4j",
+      "authorship_tag": "ABX9TyOa5taH3WUqmJ0NRafBoIHV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,28 +30,28 @@
         "id": "E3Ku2_AKf3HZ"
       },
       "source": [
-        "El meta-Xyleno se produce en un reactor de flujo de pistón a $1500R$ y $35atm$ a partir de Mesitileno. Ocurren dos reacciones en éste reactor\r\n",
-        "\r\n",
-        "$$\r\n",
-        "Mesitileno (M) + Hidrógeno (H) \\stackrel{k_1}{\\longrightarrow}  Meta-Xyleno (X) + Metano\\\\\r\n",
-        "Meta-Xyleno (X) + Hidrógeno (H) \\stackrel{k_2}{\\longrightarrow}  Tolueno (T) + Metano\r\n",
-        "$$\r\n",
-        "\r\n",
-        "La segunda reacción no es deseable porque convierte el meta-Xyleno a Tolueno. El siguiente sistema se obtiene del balance \r\n",
-        "\r\n",
-        "$$\r\n",
-        "\\frac{dC_H}{dt}=-k_1C_H^{0.5}-k_2C_H^{0.5}C_X\\\\\r\n",
-        "\\frac{dC_M}{dt}=-k_1C_H^{0.5}C_M\\\\\r\n",
-        "\\frac{dC_X}{dt}=k_1C_H^{0.5}C_M-k_2C_H^{0.5}C_X\r\n",
-        "$$\r\n",
-        "\r\n",
-        "Donde $k_1$ es la constante de la reacción 1, $k_2$ es la constante de la reacción 2, $C_H$,$C_M$ y\r\n",
-        "$C_X$ son las concentraciones de hidrógeno, mesitileno y meta-Xyleno en un $t$ específico en el\r\n",
-        "reactor. Las concentraciones de hidrógeno y mesitileno en la entrada del reactor son $0.021$ y\r\n",
-        "$0.0105$ $lbmol/ft^3$ y $k_1 = 55.2 ft^3/lbmol 0.5/hr$ $k_2 = 30.2 ft^3/lbmol 0.5/hr$.\r\n",
-        "\r\n",
-        "Graficar la concentración de hidrógeno, mesitileno, meta-Xyleno como una función de $t$ de $0$ a $0.5 hr$.\r\n",
-        "Determine el $t$ óptimo en el reactor de flujo de pistón para obtener la máxima cantidad de producto.\r\n"
+        "El meta-Xyleno se produce en un reactor de flujo de pistón a $1500R$ y $35atm$ a partir de Mesitileno. Ocurren dos reacciones en éste reactor\n",
+        "\n",
+        "$$\n",
+        "Mesitileno (M) + Hidrógeno (H) \\stackrel{k_1}{\\longrightarrow}  Meta-Xyleno (X) + Metano\\\\\n",
+        "Meta-Xyleno (X) + Hidrógeno (H) \\stackrel{k_2}{\\longrightarrow}  Tolueno (T) + Metano\n",
+        "$$\n",
+        "\n",
+        "La segunda reacción no es deseable porque convierte el meta-Xyleno a Tolueno. El siguiente sistema se obtiene del balance \n",
+        "\n",
+        "$$\n",
+        "\\frac{dC_H}{dt}=-k_1C_H^{0.5}C_M-k_2C_H^{0.5}C_X\\\\\n",
+        "\\frac{dC_M}{dt}=-k_1C_H^{0.5}C_M\\\\\n",
+        "\\frac{dC_X}{dt}=k_1C_H^{0.5}C_M-k_2C_H^{0.5}C_X\n",
+        "$$\n",
+        "\n",
+        "Donde $k_1$ es la constante de la reacción 1, $k_2$ es la constante de la reacción 2, $C_H$,$C_M$ y\n",
+        "$C_X$ son las concentraciones de hidrógeno, mesitileno y meta-Xyleno en un $t$ específico en el\n",
+        "reactor. Las concentraciones de hidrógeno y mesitileno en la entrada del reactor son $0.021$ y\n",
+        "$0.0105$ $lbmol/ft^3$ y $k_1 = 55.2 ft^3/lbmol 0.5/hr$ $k_2 = 30.2 ft^3/lbmol 0.5/hr$.\n",
+        "\n",
+        "Graficar la concentración de hidrógeno, mesitileno, meta-Xyleno como una función de $t$ de $0$ a $0.5 hr$.\n",
+        "Determine el $t$ óptimo en el reactor de flujo de pistón para obtener la máxima cantidad de producto.\n"
       ]
     },
     {
@@ -61,8 +60,8 @@
         "id": "V8IjQiMTWqzl"
       },
       "source": [
-        "from scipy.integrate import odeint\r\n",
-        "import numpy as np\r\n",
+        "from scipy.integrate import odeint\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": 1,
@@ -74,19 +73,19 @@
         "id": "rgUfoiUvW4Bp"
       },
       "source": [
-        "# Sistema de ecuaciones diferenciales\r\n",
-        "def f(C,t):\r\n",
-        "  k1 =55.2\r\n",
-        "  k2 =30.2\r\n",
-        "  #C [0] concentracion de Hidrogeno\r\n",
-        "  #C [1] concentracion de Mesitileno\r\n",
-        "  #C [2] concentracion de Meta - Xylen\r\n",
-        "  dch =-k1*C [0]**0.5* C[1] - k2*C [0]**0.5* C [2] # Hidrogeno\r\n",
-        "  dcm =-k1*C [0]**0.5* C [1] # Mesitileno\r\n",
-        "  dcx =k1*C [0]**0.5* C[1] - k2*C [0]**0.5* C [2] #Meta - Xylen\r\n",
+        "# Sistema de ecuaciones diferenciales\n",
+        "def f(C,t):\n",
+        "  k1 =55.2\n",
+        "  k2 =30.2\n",
+        "  #C [0] concentracion de Hidrogeno\n",
+        "  #C [1] concentracion de Mesitileno\n",
+        "  #C [2] concentracion de Meta - Xylen\n",
+        "  dch =-k1*C [0]**0.5* C[1] - k2*C [0]**0.5* C [2] # Hidrogeno\n",
+        "  dcm =-k1*C [0]**0.5* C [1] # Mesitileno\n",
+        "  dcx =k1*C [0]**0.5* C[1] - k2*C [0]**0.5* C [2] #Meta - Xylen\n",
         "  return [dch ,dcm , dcx ]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,16 +94,16 @@
         "id": "V7ObKW7CXGJ1"
       },
       "source": [
-        "x0 =0 # valor inicial de tiempo\r\n",
-        "#y0 =[ Hidrogeno Mesitileno Meta - Xylen ]\r\n",
-        "y0 =[0.021 ,0.0105 ,0.] # condiciones iniciales de\r\n",
-        "x1 =0.5 # valor final del tiempo\r\n",
-        "tiempo =np.linspace (x0,x1)\r\n",
-        "# llamada a la funcion odeint\r\n",
-        "sol = odeint(f,y0,tiempo )\r\n",
+        "x0 =0 # valor inicial de tiempo\n",
+        "#y0 =[ Hidrogeno Mesitileno Meta - Xylen ]\n",
+        "y0 =[0.021 ,0.0105 ,0.] # condiciones iniciales de\n",
+        "x1 =0.5 # valor final del tiempo\n",
+        "tiempo =np.linspace (x0,x1)\n",
+        "# llamada a la funcion odeint\n",
+        "sol = odeint(f,y0,tiempo )\n",
         "#sol"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,11 +116,11 @@
         "outputId": "63f94009-e2f1-41e3-b142-c3926b0d6e61"
       },
       "source": [
-        "pmax,idx = np.max(sol[:,2]),np.argmax(sol[:,2])\r\n",
-        "t=tiempo[idx]\r\n",
+        "pmax,idx = np.max(sol[:,2]),np.argmax(sol[:,2])\n",
+        "t=tiempo[idx]\n",
         "print('tiempo =',t,'hr\\nproducto maximo = ',pmax,'lbmol')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,26 +143,26 @@
         "outputId": "42bd4efb-9f92-4342-a5fd-8bc71b56fccf"
       },
       "source": [
-        "fig,ax=plt.subplots(1,figsize=(12,6))\r\n",
-        "ax.minorticks_on()\r\n",
-        "plt.plot(tiempo,sol[:,0],label = '$Hidrogeno (H)$')\r\n",
-        "plt.plot(tiempo,sol[:,1],label = '$Mesitileno (M)$')\r\n",
-        "plt.plot(tiempo,sol[:,2],label = '$Meta - Xileno (X)$')\r\n",
-        "plt.legend(fancybox=True,shadow=True,loc='upper left')\r\n",
-        "plt.grid(which='major',linestyle='-.',linewidth=0.5,color='red')\r\n",
-        "plt.grid(which='minor',linestyle='--',linewidth=0.5,color='gray')\r\n",
-        "plt.title('Producción de Meta-Xileno',fontsize=18)\r\n",
-        "plt.xlabel('tiempo [hr]')\r\n",
-        "plt.ylabel('producto [lbmol]')\r\n",
-        "\r\n",
-        "inner_ax = fig.add_axes([0.55, 0.5, 0.33, 0.33]) # x, y, width, height\r\n",
-        "inner_ax.plot(tiempo,sol[:,2],'o-.',color='green')\r\n",
-        "inner_ax.set(title='Acercamiento', xlim=(0.1800, 0.21),ylim=( 0.005055, 0.005067))\r\n",
-        "inner_ax.grid(linestyle='--')\r\n",
-        "\r\n",
+        "fig,ax=plt.subplots(1,figsize=(12,6))\n",
+        "ax.minorticks_on()\n",
+        "plt.plot(tiempo,sol[:,0],label = '$Hidrogeno (H)$')\n",
+        "plt.plot(tiempo,sol[:,1],label = '$Mesitileno (M)$')\n",
+        "plt.plot(tiempo,sol[:,2],label = '$Meta - Xileno (X)$')\n",
+        "plt.legend(fancybox=True,shadow=True,loc='upper left')\n",
+        "plt.grid(which='major',linestyle='-.',linewidth=0.5,color='red')\n",
+        "plt.grid(which='minor',linestyle='--',linewidth=0.5,color='gray')\n",
+        "plt.title('Producción de Meta-Xileno',fontsize=18)\n",
+        "plt.xlabel('tiempo [hr]')\n",
+        "plt.ylabel('producto [lbmol]')\n",
+        "\n",
+        "inner_ax = fig.add_axes([0.55, 0.5, 0.33, 0.33]) # x, y, width, height\n",
+        "inner_ax.plot(tiempo,sol[:,2],'o-.',color='green')\n",
+        "inner_ax.set(title='Acercamiento', xlim=(0.1800, 0.21),ylim=( 0.005055, 0.005067))\n",
+        "inner_ax.grid(linestyle='--')\n",
+        "\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -186,22 +185,22 @@
         "id": "EwxT3kClEMrI"
       },
       "source": [
-        "Se tiene un arreglo de 3 tanques conectados entre si como se muestra. En el inicio el tanque $T_1$\r\n",
-        "contiene una solución de salmuera con $150Kg$ de sal en un volumen de $1000 litros$, el tanque $T_2$\r\n",
-        "contiene una solución de salmuera con $200Kg$ en un volumen de $1000 litros$, y el tanque $T_3$ contiene\r\n",
-        "una solución de salmuera de $125 Kg$ en un volumen de $1000 litros$, si se hace entrar un flujo de agua\r\n",
-        "salina a razón de $100 litros/min$ con una concentración de $0.18Kg/litro$, cuál es la concentración de cada tanque pasados $30 min$?\r\n",
-        "\r\n",
-        "$$\r\n",
-        "\\frac{dC_{T_1}}{dt}=0.018-0.1C_{T_1} \\quad C_{T_1}=0.150\\\\\r\n",
-        "\\frac{dC_{T_2}}{dt}=0.01(C_{T_1}-C_{T_2}) \\quad C_{T_2}=0.200\\\\\r\n",
-        "\\frac{dC_{T_3}}{dt}=0.01(C_{T_2}-C_{T_3}) \\quad C_{T_3}=0.125\\\\\r\n",
-        "$$\r\n",
-        "\r\n",
-        "Como podemos observar, la variación de la concentración en el tanque $T_2$ depende de la variación en el tanque $T_1$, a su vez, la concentración del tanque $T_3$ depende de la variación en el tanque $T_2$.\r\n",
-        "\r\n",
-        "Dada esta dependencia se requiere calcular primero la concentración del tanque $T_1$ en el siguiente\r\n",
-        "instante para calcular la concentración en el tanque $T_2$ y luego calcular la concentración en el\r\n",
+        "Se tiene un arreglo de 3 tanques conectados entre si como se muestra. En el inicio el tanque $T_1$\n",
+        "contiene una solución de salmuera con $150Kg$ de sal en un volumen de $1000 litros$, el tanque $T_2$\n",
+        "contiene una solución de salmuera con $200Kg$ en un volumen de $1000 litros$, y el tanque $T_3$ contiene\n",
+        "una solución de salmuera de $125 Kg$ en un volumen de $1000 litros$, si se hace entrar un flujo de agua\n",
+        "salina a razón de $100 litros/min$ con una concentración de $0.18Kg/litro$, cuál es la concentración de cada tanque pasados $30 min$?\n",
+        "\n",
+        "$$\n",
+        "\\frac{dC_{T_1}}{dt}=0.018-0.1C_{T_1} \\quad C_{T_1}=0.150\\\\\n",
+        "\\frac{dC_{T_2}}{dt}=0.01(C_{T_1}-C_{T_2}) \\quad C_{T_2}=0.200\\\\\n",
+        "\\frac{dC_{T_3}}{dt}=0.01(C_{T_2}-C_{T_3}) \\quad C_{T_3}=0.125\\\\\n",
+        "$$\n",
+        "\n",
+        "Como podemos observar, la variación de la concentración en el tanque $T_2$ depende de la variación en el tanque $T_1$, a su vez, la concentración del tanque $T_3$ depende de la variación en el tanque $T_2$.\n",
+        "\n",
+        "Dada esta dependencia se requiere calcular primero la concentración del tanque $T_1$ en el siguiente\n",
+        "instante para calcular la concentración en el tanque $T_2$ y luego calcular la concentración en el\n",
         "tanque $T_3$."
       ]
     },
@@ -211,17 +210,17 @@
         "id": "SXEJbHnTXR0r"
       },
       "source": [
-        "# Sistema de ecuaciones diferenciales\r\n",
-        "def f(C,t):\r\n",
-        "  #C [0] concentracion de tanque 1\r\n",
-        "  #C [1] concentracion de tanque 2\r\n",
-        "  #C [2] concentracion de tanque 3\r\n",
-        "  dct1 = 0.018-0.1*C[0]\r\n",
-        "  dct2 = 0.1*(C[0]-C[1])\r\n",
-        "  dct3 = 0.1*(C[1]-C[2])\r\n",
+        "# Sistema de ecuaciones diferenciales\n",
+        "def f(C,t):\n",
+        "  #C [0] concentracion de tanque 1\n",
+        "  #C [1] concentracion de tanque 2\n",
+        "  #C [2] concentracion de tanque 3\n",
+        "  dct1 = 0.018-0.1*C[0]\n",
+        "  dct2 = 0.1*(C[0]-C[1])\n",
+        "  dct3 = 0.1*(C[1]-C[2])\n",
         "  return [dct1 ,dct2 , dct3 ]"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,18 +233,18 @@
         "outputId": "925a65e0-e746-4f63-d854-dff043d1c690"
       },
       "source": [
-        "x0 =0 # valor inicial de tiempo\r\n",
-        "#y0 =[ t1 t2 t3 ]\r\n",
-        "y0 =[0.15 ,0.2 ,0.125] # condiciones iniciales \r\n",
-        "x1 =30 # valor final del tiempo\r\n",
-        "tiempo =np.linspace (x0,x1)\r\n",
-        "# llamada a la funcion odeint\r\n",
-        "sol = odeint(f,y0,tiempo )\r\n",
-        "print('Tanque 1: ',sol[-1,0])\r\n",
-        "print('Tanque 2: ',sol[-1,1])\r\n",
+        "x0 =0 # valor inicial de tiempo\n",
+        "#y0 =[ t1 t2 t3 ]\n",
+        "y0 =[0.15 ,0.2 ,0.125] # condiciones iniciales \n",
+        "x1 =30 # valor final del tiempo\n",
+        "tiempo =np.linspace (x0,x1)\n",
+        "# llamada a la funcion odeint\n",
+        "sol = odeint(f,y0,tiempo )\n",
+        "print('Tanque 1: ',sol[-1,0])\n",
+        "print('Tanque 2: ',sol[-1,1])\n",
         "print('Tanque 3: ',sol[-1,2])"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,20 +268,20 @@
         "outputId": "264e2761-303c-422b-d0d2-2918e44d4dd2"
       },
       "source": [
-        "fig,ax=plt.subplots(1,figsize=(12,6))\r\n",
-        "ax.minorticks_on()\r\n",
-        "plt.plot(tiempo,sol[:,0],label = '$T_1$')\r\n",
-        "plt.plot(tiempo,sol[:,1],label = '$T_2$')\r\n",
-        "plt.plot(tiempo,sol[:,2],label = '$T_3$')\r\n",
-        "plt.legend(fancybox=True,shadow=True,loc='best')\r\n",
-        "plt.grid(which='major',linestyle='-.',linewidth=0.5,color='red')\r\n",
-        "plt.grid(which='minor',linestyle='--',linewidth=0.5,color='gray')\r\n",
-        "plt.title('Concentración de los tanques',fontsize=18)\r\n",
-        "plt.xlabel('tiempo [min]')\r\n",
-        "plt.ylabel('concentracion [Kg/litro]')\r\n",
+        "fig,ax=plt.subplots(1,figsize=(12,6))\n",
+        "ax.minorticks_on()\n",
+        "plt.plot(tiempo,sol[:,0],label = '$T_1$')\n",
+        "plt.plot(tiempo,sol[:,1],label = '$T_2$')\n",
+        "plt.plot(tiempo,sol[:,2],label = '$T_3$')\n",
+        "plt.legend(fancybox=True,shadow=True,loc='best')\n",
+        "plt.grid(which='major',linestyle='-.',linewidth=0.5,color='red')\n",
+        "plt.grid(which='minor',linestyle='--',linewidth=0.5,color='gray')\n",
+        "plt.title('Concentración de los tanques',fontsize=18)\n",
+        "plt.xlabel('tiempo [min]')\n",
+        "plt.ylabel('concentracion [Kg/litro]')\n",
         "plt.show()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -304,9 +303,7 @@
       "metadata": {
         "id": "eI3pAVZVIkdW"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
