--- a/fractal_newton.ipynb
+++ b/fractal_newton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtr5MEsk2RrkPNXeXwqwiG",
+      "authorship_tag": "ABX9TyNzqX4X+Fb5Vp2ZbkG3AzUs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,8 +63,8 @@
         "    x = x - f(x)/df(x) #aplica el metodo de Newton\n",
         "    k = k + 1 #incrementa la iteracion\n",
         "    if abs(f(x))<tol: #verifica el criterio de convergencia\n",
-        "        return x, #<---------- retorna la raiz y agregue las iteraciones\n",
-        "  return x,k"
+        "        return x, #<---------- retorna la raiz y las iteraciones\n",
+        "  return x, #<---------- retorna la raiz y las iteraciones"
       ]
     },
     {
@@ -422,7 +422,6 @@
         "import numpy as np\n",
         "import cmath\n",
         "import matplotlib.pyplot as plt\n",
-        "from mpl_toolkits import mplot3d\n",
         "\n",
         "n=900\n",
         "lienzo = np.zeros((n,n))\n",
