--- a/09ED2O.ipynb
+++ b/09ED2O.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx26ua4siJiIzg+fcSfmtx",
+      "authorship_tag": "ABX9TyOfnnL+4O6NN1/r+rglFp+c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Sistema de ecuaciones resultado de la ecuación de 2do orden"
+      ],
+      "metadata": {
+        "id": "r6apUBKSbMOU"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7BvHs3IE74Ep"
@@ -61,7 +70,7 @@
         "  du1dx=u2\n",
         "  du2dx=a*(u1-Ta)\n",
         "\n",
-        "  return np.array([du1dx,du2dx])"
+        "  return np.array([]) #<--- retornar la ec. dif y la segunda derivada du1dx,du2dx"
       ],
       "execution_count": null,
       "outputs": []
@@ -72,14 +81,14 @@
         "id": "B-eo9cJc8zg7"
       },
       "source": [
-        "L=10\n",
-        "Tx1=50\n",
-        "Tx2=200\n",
+        "L= #<--- longitud de la barra\n",
+        "Tx1= #<--- temperatura extremo izquierdo\n",
+        "Tx2= #<--- temperatura extremo derecho, el médoto debería llegar a este valor.\n",
         "longitud=np.linspace(0,L)\n",
         "\n",
-        "dT=10\n",
+        "dT= #<--- suponer un primer valor, por ejemplo 10\n",
         "\n",
-        "U10=odeint(f,[Tx1,dT],longitud)\n",
+        "U10=odeint(f,[],longitud) #<--- calcular el primer tiro con el valor inicial de la temperatura del lado izquierdo y el valor supuesto, Tx1,dT\n",
         "U10"
       ],
       "execution_count": null,
@@ -91,7 +100,7 @@
         "id": "lykaV3cXEJe_"
       },
       "source": [
-        "px.scatter(x=longitud,y=U10[:,0])"
+        "px.scatter(x=longitud,y=U10[:,0]) #se grafica para observar el comportamiento"
       ],
       "execution_count": null,
       "outputs": []
@@ -102,9 +111,9 @@
         "id": "WtqL9PQV9l-E"
       },
       "source": [
-        "dT=20\n",
+        "dT= #<--- suponer otro valor para el segundo tipo, por ejemplo 20\n",
         "\n",
-        "U20=odeint(f,[Tx1,dT],longitud)\n",
+        "U20=odeint(f,[],longitud) #<--- dar los valores iniciales Tx1,dT\n",
         "U20"
       ],
       "execution_count": null,
@@ -116,8 +125,8 @@
         "id": "iEsOX8pBEP0J"
       },
       "source": [
-        "fig=px.line(x=longitud,y=U10[:,0])\n",
-        "fig.add_scatter(x=longitud,y=U20[:,0])\n",
+        "fig=px.line(x=longitud,y=U10[:,0]) #grafica el primer tiro\n",
+        "fig.add_scatter(x=longitud,y=U20[:,0]) #graficar el segundo tiro\n",
         "fig.show()"
       ],
       "execution_count": null,
@@ -129,7 +138,7 @@
         "id": "lUJuX56R-ZId"
       },
       "source": [
-        "dT=np.interp(200,[U10[-1,0],U20[-1,0]],[10,20])\n",
+        "dT=np.interp(200,[U10[-1,0],U20[-1,0]],[10,20]) #calcular la interpolación de ambos tiros\n",
         "dT"
       ],
       "execution_count": null,
@@ -141,7 +150,7 @@
         "id": "DI5ZhlFC_exA"
       },
       "source": [
-        "U=odeint(f,[Tx1,dT],longitud)\n",
+        "U=odeint(f,[],longitud) #<--- dar los valores iniciales Tx1,dT\n",
         "U"
       ],
       "execution_count": null,
@@ -153,7 +162,7 @@
         "id": "p763xwsTBHhN"
       },
       "source": [
-        "px.scatter(x=longitud,y=U[:,0])"
+        "px.scatter(x=longitud,y=U[:,0]) #graficar el tercer tiro"
       ],
       "execution_count": null,
       "outputs": []
@@ -174,9 +183,9 @@
       },
       "source": [
         "a=0.01\n",
-        "n=100\n",
-        "L=10\n",
-        "longitud=np.linspace(0,L,n+1)\n",
+        "n=100 #numero de puntos intermedios\n",
+        "L=10 #longitud de la barra\n",
+        "longitud=np.linspace(0,L,n+1) #crear el vector de las particiones\n",
         "h=L/n\n",
         "Ta=25\n",
         "T0=50\n",
@@ -188,6 +197,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#crear la matriz de coeficientes tridiagonal\n",
         "A=np.diag([1]*(n-2),-1) + np.diag([-(2+a*h**2)]*(n-1)) + np.diag([1]*(n-2),1)\n",
         "A"
       ],
@@ -200,7 +210,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#crear el vector de constantes\n",
         "b=np.array([-a*h**2*Ta]*(n-1))\n",
+        "#reemplazar el primero y ultimo valor\n",
         "b[0]=b[0]-T0\n",
         "b[-1]=b[-1]-Tn\n",
         "b"
@@ -214,9 +226,9 @@
     {
       "cell_type": "code",
       "source": [
-        "T=np.linalg.solve(A,b)\n",
-        "T=np.append(T0,T)\n",
-        "T=np.append(T,Tn)\n",
+        "T=np.linalg.solve(A,b) #resolver el sistema para los valores intermedios\n",
+        "T=np.append(T0,T) #se pone el valor de la izquierda de la barra\n",
+        "T=np.append(T,Tn) #se pone el valor de la derecha de la barra\n",
         "T"
       ],
       "metadata": {
@@ -231,7 +243,7 @@
         "id": "RrABX0sgoxPa"
       },
       "source": [
-        "px.scatter(x=longitud,y=T)"
+        "px.scatter(x=longitud,y=T) #graficar todos los puntos de temperatura de la barra"
       ],
       "execution_count": null,
       "outputs": []
